--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "adamwathan/password-updater",
     "require": {
-        "illuminate/contracts": "~5.0"
+        "illuminate/contracts": "~5.0",
+        "illuminate/auth": "~5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "AdamWathan\\PasswordUpdater\\": "src/"
+        }
     },
     "license": "MIT",
     "authors": [
@@ -9,5 +15,9 @@
             "name": "Adam Wathan",
             "email": "adam.wathan@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.6"
+    }
 }
